// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameAvatar Renders the initial and color for Doe 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-jindr0-MuiAvatar-root"
  >
    D
  </div>
</DocumentFragment>
`;

exports[`NameAvatar Renders the initial and color for Fran 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-yjazcl-MuiAvatar-root"
  >
    F
  </div>
</DocumentFragment>
`;

exports[`NameAvatar Renders the initial and color for John 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1u97j49-MuiAvatar-root"
  >
    J
  </div>
</DocumentFragment>
`;
